# hbrs

./: .gitignore  CMakeLists.txt  README.md  autobuild  config.json
conf/: config.json
hbrs/: CMakeLists.txt  global.h  main.cpp
hbrs/common/: audio_define.h  av_define.h  bind_cpu.h  buffer.h  config.cpp  config.h  daemon.h  err_code.h  global.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  json.h  logger.h  rtc.h  switch.cpp  switch.h  system.h  utils.h  video_define.h
hbrs/live/: normal_rtmp_streamer.cpp  normal_rtmp_streamer.h  rtmp_live.cpp  rtmp_live.h  rtmp_streamer.cpp  rtmp_streamer.h  srs_rtmp_streamer.cpp  srs_rtmp_streamer.h  vrtmp_streamer.cpp  vrtmp_streamer.h
hbrs/model/: change_main_scene_req.h  change_osd_req.h  change_pc_capture_req.h  change_switch_command_req.h  change_video_req.h  live_req.h  local_live_req.h  record_req.h  remote_live_req.h  resource_record_req.h
hbrs/osd/: jpeg_dec.cpp  jpeg_dec.h  osd.cpp  osd.h  osd_ts.cpp
hbrs/record/: mp4_muxer.cpp  mp4_muxer.h  mp4_record.cpp  mp4_record.h
hbrs/system/: aenc.cpp  aenc.h  ai.cpp  ai.h  ao.cpp  ao.h  channel.h  fb.cpp  mpp.cpp  mpp.h  pciv_comm.cpp  pciv_comm.h  pciv_trans.cpp  pciv_trans.h  sig_detect.cpp  sig_detect.h  switch.h  vdec.cpp  vdec.h  venc.cpp  venc.h  vi.cpp  vi.h  vm.cpp  vm.h  vo.cpp  vo.h  vpss.cpp  vpss.h
script/: monitor.sh
shell/: monitor.sh
src/: CMakeLists.txt
src/common/: av_define.h  buffer.h  config.cpp  http_client.cpp  http_client.h  switch.cpp  system.cpp
src/live/: rtmp_live.cpp
src/model/: camera_control_req.h  change_display_sceen_req.h  change_main_sceen_req.h  change_osd_ts_req.h  change_pc_capture_req.h  change_record_mode_req.h  http_notify_req.h  record_req.h  remote_live_req.h  switch_req.h
src/osd/: jpeg_dec.cpp  osd.cpp  osd_ts.h
src/record/: mp4_muxer.cpp
src/system/: aenc.h  ao.cpp  fb.h  mpp.cpp  mpp.h  pciv_comm.cpp  pciv_trans.cpp  sig_detect.cpp  vdec.h  venc.h  vi.cpp  vi.h  vm.cpp  vpss.cpp  vpss.h
