cmake_minimum_required(VERSION 3.5)

project(3531 
    LANGUAGES CXX
    VERSION 2.0.0)

set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_C_COMPILER  arm-hisiv400-linux-gcc)
SET(CMAKE_CXX_COMPILER arm-hisiv400-linux-g++)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_SKIP_RPATH true)
set(DEBUG false)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")


if(DEBUG)
    message(STATUS "BUILD DEBUG")
    set(CMAKE_CXX_FLAGS "-g -Wall -Wno-deprecated-declarations ${CMAKE_CXX_FLAGS}")
    set(CMAKE_C_FLAGS "-g -Wall -Wno-deprecated-declarations ${CMAKE_C_FLAGS}")
else()
    message(STATUS "BUILD RELEASE")
    set(CMAKE_CXX_FLAGS "-Wall -Wno-deprecated-declarations ${CMAKE_CXX_FLAGS}")
    set(CMAKE_C_FLAGS "-Wall -Wno-deprecated-declarations ${CMAKE_C_FLAGS}")
endif()

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/hbrs
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/include
)

link_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/lib
)

add_subdirectory(hbrs)
